<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_user2"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_room"
            android:title="@string/rooms" />
        <item
            android:id="@+id/nav_switch_types"
            android:icon="@drawable/ic_switch2"
            android:title="@string/switch_types" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_settings"
            android:title="@string/module_configurations" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_simpson"
            android:title="@string/test" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
