<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.RoomDetailsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/room_details_icon_room"
            android:layout_width="152dp"
            android:layout_height="126dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_room" />

        <TextView
            android:id="@+id/room_details_name_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="36dp"
            android:text="@string/prompt_name"
            app:layout_constraintEnd_toStartOf="@+id/room_details_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/room_details_icon_room" />

        <EditText
            android:id="@+id/room_details_name_edit_text"
            android:layout_width="273dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_details_icon_room"
            app:layout_constraintVertical_bias="0.009" />

        <Button
            android:id="@+id/room_details_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/action_edit"
            app:layout_constraintBottom_toTopOf="@+id/room_details_list_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_details_name_edit_text" />

        <ListView
            android:id="@+id/room_details_list_view"
            android:layout_width="368dp"
            android:layout_height="245dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
