<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.EditProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_manipulation_username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:gravity="bottom|center"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/user_manipulation_username_edit_text"
                android:layout_width="308dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_manipulation_pass_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="bottom|center"
            app:layout_constraintTop_toBottomOf="@+id/user_manipulation_username_text_input_layout"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/user_manipulation_pass_edit_text"
                android:layout_width="308dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_manipulation_retype_pass_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="bottom|center"
            app:layout_constraintTop_toBottomOf="@+id/user_manipulation_pass_text_input_layout"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/user_manipulation_retype_pass_edit_text"
                android:layout_width="308dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_retype_password"
                android:inputType="textPassword"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_retype_password"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/user_manipulation_role_spinner"
            android:layout_width="308dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_manipulation_retype_pass_text_input_layout"
            app:layout_constraintVertical_bias="0.151" />

        <Button
            android:id="@+id/user_manipulation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_manipulation_role_spinner"
            app:layout_constraintVertical_bias="0.418" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
